--- a/bower.json
+++ b/bower.json
@@ -8,9 +8,10 @@
     "output"
   ], 
   "dependencies": {
-    "purescript-maybe": "*"
+    "purescript-arraybuffer-types": "~0.1.0",
+    "purescript-maybe": "~0.2.1"
   },
   "devDependencies": {
-    "purescript-quickcheck": "*"
+    "purescript-quickcheck": "~0.5.0"
   }
 }
