--- a/bower.json
+++ b/bower.json
@@ -6,12 +6,14 @@
     "node_modules",
     "bower_components",
     "output"
-  ], 
+  ],
   "dependencies": {
-    "purescript-arraybuffer-types": "~0.1.0",
-    "purescript-maybe": "~0.2.1"
+    "purescript-functions": "~0.1.0",
+    "purescript-arraybuffer-types": "~0.2.0",
+    "purescript-maybe": "~0.3.4"
   },
   "devDependencies": {
-    "purescript-quickcheck": "~0.5.0"
+    "purescript-debug": "~0.1.2",
+    "purescript-quickcheck": "~0.12.0"
   }
 }
