--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "purescript-arraybuffer",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -8,12 +8,13 @@
     "output"
   ],
   "dependencies": {
-    "purescript-functions": "~0.1.0",
+    "purescript-functions": "~1.0.0",
     "purescript-arraybuffer-types": "~0.2.0",
-    "purescript-maybe": "~0.3.4"
+    "purescript-maybe": "~1.0.0",
+    "purescript-eff": "1.0.0"
   },
   "devDependencies": {
-    "purescript-debug": "~0.1.2",
-    "purescript-quickcheck": "~0.12.0"
+    "purescript-debug": "~1.0.0",
+    "purescript-quickcheck": "~1.0.0"
   }
 }
