--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "purescript-arraybuffer",
-  "version": "1.0.0",
+  "version": "2.0.0",
+  "license": "MIT",
   "ignore": [
     "**/.*",
     "node_modules",
