Switch to Data.UInt

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "purescript-arraybuffer",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
     "purescript-arraybuffer-types": "~0.2.0",
     "purescript-maybe": "~1.0.0",
     "purescript-eff": "1.0.0",
-    "purescript-int-53": "^2.0.1"
+    "purescript-uint": "^0.1.0"
   },
   "devDependencies": {
     "purescript-debug": "~1.0.0",
