Make ArrayBuffer creation effectful
- Remove the Writer effect from Typed.purs
- Move down the WRITER and READER effects from DataView to ArrayBuffer
- Simplify by combining WRITER and READER into a single ARRAYBUFFER
effect
- Updated tests to deal with the Eff values

--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "purescript-debug": "^2.0.0",
-    "purescript-quickcheck": "^3.0.0"
+    "purescript-quickcheck": "^3.0.0",
+    "purescript-partial": "^1.2.0"
   }
 }
