--- a/bower.json
+++ b/bower.json
@@ -13,15 +13,15 @@
     "output"
   ],
   "dependencies": {
-    "purescript-functions": "^3.0.0",
+    "purescript-functions": "^4.0.0",
     "purescript-arraybuffer-types": "^2.0.0",
-    "purescript-maybe": "^3.0.0",
-    "purescript-eff": "^3.0.0",
-    "purescript-uint": "^0.5.0"
+    "purescript-maybe": "^4.0.0",
+    "purescript-effect": "^2.0.0",
+    "purescript-uint": "adkelley/purescript-uint#compiler/0.12"
   },
   "devDependencies": {
-    "purescript-debug": "^3.0.0",
-    "purescript-quickcheck": "^4.0.0",
-    "purescript-partial": "^1.2.0"
+    "purescript-debug": "^4.0.0",
+    "purescript-quickcheck": "^5.0.0",
+    "purescript-partial": "^2.0.0"
   }
 }
