--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "purescript-debug": "^4.0.0",
     "purescript-quickcheck": "^5.0.0",
-    "purescript-partial": "^2.0.0"
+    "purescript-partial": "^2.0.0",
+    "purescript-unicode": "^4.0.1"
   }
 }
