--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,7 @@
     "purescript-arraybuffer-types": "^2.0.0",
     "purescript-maybe": "^4.0.0",
     "purescript-effect": "^2.0.0",
-    "purescript-uint": "^4.0.0",
-    "purescript-text-encoding": "^0.0.9"
+    "purescript-uint": "^4.0.0"
   },
   "devDependencies": {
     "purescript-debug": "^4.0.0",
