--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "purescript-effect": "^2.0.0",
     "purescript-nullable": "^4.1.0",
     "purescript-typelevel": "^4.0.0",
-    "purescript-parseint": "^1.1.0"
+    "purescript-parseint": "^1.1.0",
+    "purescript-uint": "^4.0.2"
   },
   "devDependencies": {
     "purescript-debug": "^4.0.0",
