--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "purescript-nullable": "^4.1.0",
     "purescript-typelevel": "^4.0.0",
     "purescript-parseint": "^1.1.0",
-    "purescript-uint": "^4.0.2"
+    "purescript-uint": "^4.0.2",
+    "purescript-sized-vectors": "^3.1.0"
   },
   "devDependencies": {
     "purescript-debug": "^4.0.0",
