--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "purescript-typelevel": "^4.0.0",
     "purescript-parseint": "^1.1.0",
     "purescript-uint": "^5.1.0",
-    "purescript-sized-vectors": "^3.1.0"
+    "purescript-sized-vectors": "^3.1.0",
+    "purescript-float32": "^0.0.1"
   },
   "devDependencies": {
     "purescript-debug": "^4.0.0",
