--- a/bower.json
+++ b/bower.json
@@ -16,12 +16,10 @@
     "purescript-arraybuffer-types": "^2.0.0",
     "purescript-maybe": "^4.0.0",
     "purescript-effect": "^2.0.0",
-    "purescript-uint": "^4.0.0"
+    "purescript-uint": "^5.0.0"
   },
   "devDependencies": {
     "purescript-debug": "^4.0.0",
-    "purescript-quickcheck": "^5.0.0",
-    "purescript-partial": "^2.0.0",
-    "purescript-unicode": "^4.0.1"
+    "purescript-quickcheck": "^5.0.0"
   }
 }
