upgrading deps - waiting on sized-vectors to get pulled

--- a/bower.json
+++ b/bower.json
@@ -14,19 +14,19 @@
   "dependencies": {
     "purescript-functions": "^4.0.0",
     "purescript-arraybuffer-types": "^2.0.0",
-    "purescript-maybe": "^4.0.0",
-    "purescript-effect": "^2.0.0",
-    "purescript-nullable": "^4.1.0",
-    "purescript-typelevel": "^4.0.0",
-    "purescript-uint": "^5.1.0",
-    "purescript-sized-vectors": "^3.1.0",
-    "purescript-partial": "^2.0.0",
+    "purescript-maybe": "^4.0.1",
+    "purescript-effect": "^2.0.1",
+    "purescript-nullable": "^4.1.1",
+    "purescript-typelevel": "^6.0.0",
+    "purescript-uint": "^5.1.1",
+    "purescript-sized-vectors": "git://github.com/athanclark/purescript-sized-vectors.git#4fcf13f5ed949e95242b99bcace1648e29bbcbad",
+    "purescript-partial": "^2.0.1",
     "purescript-float32": "~0.1.1"
   },
   "devDependencies": {
     "purescript-debug": "^4.0.0",
-    "purescript-quickcheck": "^5.0.0",
-    "purescript-quickcheck-combinators": "~0.1.0",
-    "purescript-quickcheck-laws": "^4.0.0"
+    "purescript-quickcheck": "^6.1.0",
+    "purescript-quickcheck-combinators": "~0.1.2",
+    "purescript-quickcheck-laws": "^5.0.1"
   }
 }
