--- a/bower.json
+++ b/bower.json
@@ -12,20 +12,21 @@
     "output"
   ],
   "dependencies": {
-    "purescript-functions": "^4.0.0",
+    "purescript-prelude": "^5.0.0",
+    "purescript-functions": "^5.0.0",
     "purescript-arraybuffer-types": "^2.0.0",
-    "purescript-maybe": "^4.0.1",
-    "purescript-effect": "^2.0.1",
-    "purescript-nullable": "^4.1.1",
+    "purescript-maybe": "^5.0.0",
+    "purescript-effect": "^3.0.0",
+    "purescript-nullable": "^5.0.0",
     "purescript-typelevel": "^6.0.0",
-    "purescript-uint": "^5.1.1",
-    "purescript-partial": "^2.0.1",
-    "purescript-float32": "~0.1.1"
+    "purescript-uint": "^5.1.4",
+    "purescript-partial": "^3.0.0",
+    "purescript-float32": "~0.2.0"
   },
   "devDependencies": {
-    "purescript-debug": "^4.0.0",
-    "purescript-quickcheck": "^6.1.0",
-    "purescript-quickcheck-combinators": "~0.1.2",
-    "purescript-quickcheck-laws": "^5.0.1"
+    "purescript-debug": "^5.0.0",
+    "purescript-quickcheck": "^7.0.0",
+    "purescript-quickcheck-combinators": "~0.1.3",
+    "purescript-quickcheck-laws": "^6.0.0"
   }
 }
