Run contrib-updater

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-*~
-output/
-bower_components/
-node_modules/
-.psci
-.psci_modules/
-yarn-error.log
-yarn.lock
-generated-docs/
-.spago/
-.psc-ide-port
+.*
+!.gitignore
+!.github
+!.editorconfig
+
+output
+generated-docs
+bower_components
