--- a/bower.json
+++ b/bower.json
@@ -1,72 +1,30 @@
 {
-  "name": "purescript-arraybuffer",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/jacereda/purescript-arraybuffer.git"
-  },
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "output"
-  ],
-  "dependencies": {
-    "purescript-prelude": "^5.0.0",
-    "purescript-functions": "^5.0.0",
-    "purescript-arraybuffer-types": "^2.0.0",
-    "purescript-maybe": "^5.0.0",
-    "purescript-effect": "^3.0.0",
-    "purescript-nullable": "^5.0.0",
-    "purescript-typelevel": "^6.0.0",
-    "purescript-uint": "^5.1.4",
-    "purescript-partial": "^3.0.0",
-    "purescript-float32": "~0.2.0"
-  },
-  "devDependencies": {
-    "purescript-debug": "^5.0.0",
-    "purescript-quickcheck": "^7.0.0",
-    "purescript-quickcheck-combinators": "~0.1.3",
-    "purescript-quickcheck-laws": "^6.0.0"
-  },
-  "resolutions": {
-    "purescript-effect": "^3.0.0",
-    "purescript-functions": "^5.0.0",
-    "purescript-partial": "^3.0.0",
-    "purescript-prelude": "^5.0.0",
-    "purescript-maybe": "^5.0.0",
-    "purescript-quickcheck": "^7.0.0",
-    "purescript-control": "^5.0.0",
-    "purescript-invariant": "^5.0.0",
-    "purescript-newtype": "^4.0.0",
-    "purescript-quickcheck-laws": "^6.0.0",
-    "purescript-arrays": "^6.0.0",
-    "purescript-enums": "^5.0.0",
-    "purescript-foldable-traversable": "^5.0.0",
-    "purescript-console": "^5.0.0",
-    "purescript-exceptions": "^5.0.0",
-    "purescript-gen": "^3.0.0",
-    "purescript-either": "^5.0.0",
-    "purescript-integers": "^5.0.0",
-    "purescript-lazy": "^5.0.0",
-    "purescript-lcg": "^3.0.0",
-    "purescript-lists": "^6.0.0",
-    "purescript-identity": "^5.0.0",
-    "purescript-math": "^3.0.0",
-    "purescript-nonempty": "^6.0.0",
-    "purescript-record": "^3.0.0",
-    "purescript-st": "^5.0.0",
-    "purescript-strings": "^5.0.0",
-    "purescript-transformers": "^5.0.0",
-    "purescript-tuples": "^6.0.0",
-    "purescript-unfoldable": "^5.0.0",
-    "purescript-tailrec": "^5.0.0",
-    "purescript-unsafe-coerce": "^5.0.0",
-    "purescript-orders": "^5.0.0",
-    "purescript-bifunctors": "^5.0.0",
-    "purescript-random": "^5.0.0",
-    "purescript-distributive": "^5.0.0",
-    "purescript-refs": "^5.0.0",
-    "purescript-type-equality": "^4.0.0"
-  }
+    "name": "purescript-arraybuffer",
+    "license": [
+        "MIT"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/purescript-contrib/purescript-arraybuffer"
+    },
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "output"
+    ],
+    "dependencies": {
+        "purescript-arraybuffer-types": "^v3.0.0",
+        "purescript-arrays": "^v6.0.1",
+        "purescript-effect": "^v3.0.0",
+        "purescript-float32": "^v1.0.0",
+        "purescript-functions": "^v5.0.0",
+        "purescript-gen": "^v3.0.0",
+        "purescript-maybe": "^v5.0.0",
+        "purescript-nullable": "^v5.0.0",
+        "purescript-prelude": "^v5.0.1",
+        "purescript-tailrec": "^v5.0.1",
+        "purescript-uint": "^v6.0.3",
+        "purescript-unfoldable": "^v5.0.0"
+    }
 }
