--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Set up a PureScript toolchain
         uses: purescript-contrib/setup-purescript@main
+        with:
+          purs-tidy: "latest"
 
       - name: Cache PureScript dependencies
         uses: actions/cache@v2
@@ -38,3 +40,6 @@ jobs:
 
       - name: Run tests
         run: spago -x spago-test.dhall test --no-install
+
+      - name: Check formatting
+        run: purs-tidy check src test
