Ignore spago-based tests (temporarily)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build tests
         run: spago -x spago-test.dhall build --no-install --purs-args '--censor-lib --strict'
 
-      - name: Run tests
+#      - name: Run tests
         run: spago -x spago-test.dhall test --no-install
 
       - name: Check formatting
