--- a/bower.json
+++ b/bower.json
@@ -1,30 +1,30 @@
 {
-    "name": "purescript-arraybuffer",
-    "license": [
-        "MIT"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/purescript-contrib/purescript-arraybuffer"
-    },
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "output"
-    ],
-    "dependencies": {
-        "purescript-arraybuffer-types": "^v3.0.1",
-        "purescript-arrays": "^v6.0.1",
-        "purescript-effect": "^v3.0.0",
-        "purescript-float32": "^v1.0.0",
-        "purescript-functions": "^v5.0.0",
-        "purescript-gen": "^v3.0.0",
-        "purescript-maybe": "^v5.0.0",
-        "purescript-nullable": "^v5.0.0",
-        "purescript-prelude": "^v5.0.1",
-        "purescript-tailrec": "^v5.0.1",
-        "purescript-uint": "^v6.0.3",
-        "purescript-unfoldable": "^v5.0.0"
-    }
+  "name": "purescript-arraybuffer",
+  "license": [
+    "MIT"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/purescript-contrib/purescript-arraybuffer"
+  },
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "output"
+  ],
+  "dependencies": {
+    "purescript-arraybuffer-types": "main",
+    "purescript-arrays": "master",
+    "purescript-effect": "master",
+    "purescript-float32": "main",
+    "purescript-functions": "master",
+    "purescript-gen": "master",
+    "purescript-maybe": "master",
+    "purescript-nullable": "main",
+    "purescript-prelude": "master",
+    "purescript-tailrec": "master",
+    "purescript-uint": "main",
+    "purescript-unfoldable": "master"
+  }
 }
