Installed bower dev dependency: purescript-quickcheck-laws@main

--- a/bower.json
+++ b/bower.json
@@ -26,5 +26,8 @@
     "purescript-tailrec": "master",
     "purescript-uint": "main",
     "purescript-unfoldable": "master"
+  },
+  "devDependencies": {
+    "purescript-quickcheck-laws": "main"
   }
 }
