--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Build tests
         run: spago -x spago-test.dhall build --no-install --purs-args '--censor-lib --strict'
 
-#      - name: Run tests
-#        run: spago -x spago-test.dhall test --no-install
+      - name: Run tests
+        run: spago -x spago-test.dhall test --no-install
 
       - name: Check formatting
         run: purs-tidy check src test
